--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "clsx": "^1.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.2",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.3",
