--- a/.prettierrc
+++ b/.prettierrc
@@ -5,7 +5,7 @@
   "trailingComma": "es5",
   "jsxBracketSameLine": true,
   "printWidth": 80,
-  "semi": false,
+  "semi": true,
   "bracketSpacing": true,
   "arrowParens": "always",
   "proseWrap": "never"
